--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>Matching Game</title>
@@ -8,7 +9,9 @@
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
+    <!-- <link rel="stylesheet" href="css/animate.css"> -->
 </head>
+
 <body>
 
     <div class="container">
@@ -17,17 +20,17 @@
         </header>
 
         <section class="score-panel">
-        	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        	</ul>
+            <ul class="stars">
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul>
 
-        	<span class="moves"></span> Moves
+            <span class="moves"></span> Moves
 
             <div class="restart">
-        		<i class="fa fa-repeat"></i>
-        	</div>
+                <i class="fa fa-repeat"></i>
+            </div>
         </section>
 
         <ul class="deck">
@@ -80,10 +83,27 @@
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
-
         <div id="timer"></div>
+
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                
+                <div class="modal-body">
+                    <h1>Congratulations !!</h1>
+                    <h3 class="game-summary"></h3>
+                    <button type="button" id="play-again" >Play Again !</button>
+                </div>
+            </div>
+
+        </div>
+
+
     </div>
 
     <script src="js/app.js"></script>
 </body>
+
 </html>
